# ArcSight

./: .env.example  .gitignore  API_STANDARDIZATION.md  CALIBRATION_TESTING_SUMMARY.md  CAMERAS_TESTING_SUMMARY.md  CLAUDE.md  PLAYWRIGHT_IMPLEMENTATION_SUMMARY.md  REACT_MIGRATION.md  README.md  TESTING_SUMMARY.md  app.py  bench_apriltag.py  config.py  environment.yml  lib_test.py  package-lock.json  package.json  pixi.toml  playwright.config.ts  pyproject.toml  pytest.ini  requirements.txt  run.py  test_camera.py  test_config.py  tsconfig.json  vite.config.ts
.claude/: settings.local.json
app/: __init__.py  apriltag_fields.py  calibration_utils.py  camera_discovery.py  camera_manager.py  camera_stream.py  camera_threads.py  camera_types.py  camera_utils.py  camera_utils_oakd.py  db.py  enums.py  extensions.py  factories.py  models.py  network_utils.py  pipeline_validators.py  thread_config.py  thread_state.py  usb_device_info.py  video_encoder.py  vite_manager.py
data/: 2023-charged-up.json
e2e/: calibration.spec.ts  cameras.spec.ts  settings.spec.ts
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: bench_apriltag.py  bench_apriltag_genicam.py  start-backend.mjs
src/: App.tsx  index.css  main.tsx
tests/: conftest.py  test_apriltag_fields.py  test_apriltag_pipeline.py  test_base_driver.py  test_calibration_utils.py  test_camera_discovery.py  test_camera_manager.py  test_camera_stream.py  test_camera_threads.py  test_cameras_api.py  test_genicam_driver.py  test_monitoring_metrics.py  test_oakd_driver.py  (+5 more)
web/: db.py  (+2 more)
(+192 files in other folders)
